--- a/consulta.html
+++ b/consulta.html
@@ -181,12 +181,14 @@
 
     <nav class="row">
         <div class="col d-flex">
-            <nav class="d-flex m-3">
-                <li><a href="index.html" class="fa-solid fa-house"></a></li>
-                <li><em class="fa-solid fa-angle-right"></em></li>
-                <li><a href="">Vehículos</a></li>
-                <li><em class="fa-solid fa-angle-right"></em></li>
-                <li><a href="">Reporte de pagos</a></li>
+            <nav>
+                <ul class="d-flex m-3 align-items-center">
+                    <li class="mx-1" ><a href="index.html" class="fa-solid fa-house" title="Inicio"></a></li>
+                    <em class="fa-solid fa-angle-right"></em>
+                    <li class="mx-1"><a href="consulta.html">Vehículos</a></li>
+                    <em class="fa-solid fa-angle-right"></em>
+                    <li class="mx-1"><a href="">Reporte de pagos</a></li>
+                </ul>
             </nav>
         </div>
     </nav>
